--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
+    id 'dagger.hilt.android.plugin'
 }
 
 android {
@@ -68,5 +70,7 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-serialization-core:1.4.1'
 
     //Dagger Hilt:
-    implementation 'com.google.dagger:hilt-android:2.44.2'
+    implementation "com.google.dagger:hilt-android:$hilt_version"
+    implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
+    kapt "com.google.dagger:hilt-compiler:$hilt_version"
 }
